# test-github-actions

./: 2022.12.27-08.50.54.txt  2022.12.27-09.34.45.txt  2022.12.27-09.39.10.txt  2022.12.27-09.42.44.txt  2022.12.27-14.38.35.txt  2022.12.27-14.47.34.txt  2022.12.27-14.49.19.txt  2022.12.27-14.49.55.txt  2022.12.27-14.50.40.txt  2022.12.27-14.51.29.txt  README.md  main.py  pyproject.toml
.github/scripts/: update.sh
.github/workflows/: dev_check_latest_version.yml
