[tool.poetry]
name = "test-github-actions"
version = "0.1.0"
description = ""
authors = ["José Loarca <joseloarca97@icloud.com>"]
readme = "README.md"
packages = [{include = "test_github_actions"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.prod.dependencies]
poetry-versioning = { git = "git@github.com:ehn-jloarca/poetry-versioning.git", branch = "master" }

[tool.poetry.group.dev.dependencies]
# Get the latest revision on the branch named "develop"
poetry-versioning = { git = "git@github.com:ehn-jloarca/poetry-versioning.git", branch = "develop" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
